# AibriefAI

./: .env.example  .gitignore  AIBRIEF_IMPLEMENTATION_PROMPT.json  ARCHITECTURE.md  BIRDCLAW_IMPORT.md  CONNECT_RENDER.md  Dockerfile  LAST30DAYS_ADAPTATION.md  PKG-INFO  QA_TEST_REPORT.md  RUNBOOK.md  SECURITY.md  SOURCES.txt  WORKFLOW.md  ZERO_COST_RENDER_LAUNCH.md  __init__ (4).py  __init__ (6).py  __init__ (7).py  __init__.py  _headers  _redirects  aibrief_graph.py  base.py  brief.html  build_html_brief.py  check_llm_usage.py  check_signals_freshness.py  cli.py  debate.py  decision_log.py  dependency_links.txt  discovery.py  docker-compose.yml  editor.py  env.example  env.production.template  gitleaks.toml  health.json  health.py  html_brief.py  (+27 more)
.github/workflows/: breaking-alerts.yml  compare-x-sources.yml  update-feed.yml
aibrief/: __init__.py  breaking_monitor.py  capability_catalog.json  capability_registry.py
aibrief/connectors/: __init__.py  agent_reach.py
data/: breaking_state.json  latest_report.json
reports/x-source-comparisons/: 20260626T013545Z-x-source-comparison.md
tests/: test_agent_reach_connector.py  test_breaking_monitor.py  test_capability_registry.py  test_compare_x_sources.py
tools/: compare_x_sources.py  run_birdclaw_import.py
web/: brief.html  health.json  index.html  landing-template.html
web/data/: breaking_status.json  signals.json
web/health/: index.html
