[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aibriefai"
version = "0.5.1"
description = "AibriefAI Arabic/English AI briefing dashboard and pipeline"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
agent-reach = [
  "agent-reach>=1.4.2",
]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["aibrief*"]
